2018-01-05  Tom Tromey  <tom@tromey.com>

	* dwarf2read.c (delayed_method_info): Remove typedef.
	(dwarf2_cu::method_info): Now a std::vector.
	(add_to_method_list): Update.
	(free_delayed_list): Remove.
	(compute_delayed_physnames): Update.
	(process_full_comp_unit, process_full_type_unit): Clear the method
	list.  Remove cleanups.
	(psymtab_include_file_name): Add name_holder parameter.  Use
	unique_xmalloc_ptr.
	(dwarf_decode_lines): Update.

2018-01-05  Tom Tromey  <tom@tromey.com>

	* dwarf2read.c (struct dwarf2_cu): Add constructor, destructor.
	<free_abbrev_table>: Declare method.
	(~auto_free_abbrev_table): Update.
	(init_tu_and_read_dwo_dies): Use unique_ptr.  Remove cleanups.
	(init_cutu_and_read_dies): Likewise.
	(init_cutu_and_read_dies_no_follow): Update.
	(dwarf2_free_abbrev_table): Remove.
	(dwarf2_cu::dwarf2_cu): New.  Rename from init_one_comp_unit.
	(dwarf2_cu::~dwarf2_cu): New.
	(dwarf2_cu::free_abbrev_table): New method.
	(free_heap_comp_unit, free_stack_comp_unit): Remove.
	(age_cached_comp_units, free_one_cached_comp_unit): Use delete.

2018-01-05  Tom Tromey  <tom@tromey.com>

	* dwarf2read.c (class auto_free_abbrev_table): New.
	(struct abbrev_table): Add constructor, destructor.
	<alloc_abbrev, add_abbrev, lookup_abbrev>: Declare methods.
	(read_cutu_die_from_dwo): Add abbrev_table parameter.
	(init_cutu_and_read_dies): Update.
	(init_cutu_and_read_dies_no_follow): Use auto_free_abbrev_table.
	(build_type_psymtabs_1, peek_die_abbrev, read_full_die_1):
	Update.
	(abbrev_table::alloc_abbrev): Rename from
	abbrev_table_alloc_abbrev.
	(abbrev_table::add_abbrev): Rename from abbrev_table_add_abbrev.
	(abbrev_table::lookup_abbrev): Rename from
	abbrev_table_lookup_abbrev.
	(abbrev_table_read_table): Return a unique_ptr.
	(abbrev_table_free, abbrev_table_free_cleanup): Remove.
	(dwarf2_read_abbrevs): Update.
	(dwarf2_free_abbrev_table): Change argument type to dwarf2_cu*.

2018-01-05  Tom Tromey  <tom@tromey.com>
